selfie wall overflow fix and minor grid adjustments

--- a/wp-content/themes/unity-child/resources/assets/styles/components/_bbmodules.scss
+++ b/wp-content/themes/unity-child/resources/assets/styles/components/_bbmodules.scss
@@ -75,8 +75,8 @@
   }
 
   &__grid-item {
-    width: 10.5rem;
-    height: 10.5rem;
+    width: 10rem;
+    height: 10rem;
     border-radius: 100%;
     background-color: #F2F2F2;
     overflow: hidden;
@@ -123,6 +123,7 @@
       bottom: 0;
       width: 100%;
       height: 100%;
+      border-radius: 100%;
     }
 
     img {
@@ -166,10 +167,12 @@
       grid-column-gap: 1rem;
       grid-row-gap: 1rem;
       max-width: 30rem;
-      grid-template-columns: repeat(4, 5rem);
+      grid-template-columns: repeat(4, 4rem);
     }
 
     &__grid-item {
+      width: 9rem;
+      height: 9rem;
       grid-column: span 2;
       margin-top: 0;
       margin-right: 0;
@@ -193,10 +196,15 @@
       grid-column: 2;
     }
 
-    @media #{$small-and-up} {
+    @media (min-width: 620px) {
       &__grid {
         max-width: 40rem;
         grid-template-columns: repeat(6, 5rem);
+      }
+
+      &__grid-item {
+        width: 11rem;
+        height: 11rem;
       }
 
       &__grid-item:nth-child(5n+1) {
